--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
             <h3 class="clickable">Load More NASA Images</h3>
           </span>
       </div>
+      <!-- Images Container -->
+      <div class="images-container">
+
+        <div class="card">
+          <a href="" title="View Full Image" target="_blank">
+            <img src="https://apod.nasa.gov/apod/image/2308/LDN935_Jones_1840.jpg" alt="NASA Pictures of the Day" class="card-img-top">
+          </a>
+          <div class="card-body">
+            <h5 class="card-title">Title of Image</h5>
+            <p class="clickable">Add to Favorites</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Delectus saepe nesciunt quia officia voluptate eligendi voluptas. Maiores earum veritatis laborum reiciendis illum tempora provident, culpa, deleniti tenetur soluta, beatae porro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Non vel quas, velit quos animi quaerat nostrum, fuga nulla sit quis repellendus voluptatum quidem odit incidunt corrupti quasi eos rem doloribus.</p>
+            <small class="text-mutes">
+              <strong>12-12-2020</strong>
+              <span>CopyRight Info</span>
+            </small>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <!-- Save confirmation-->
+    <div class="save-confirmed" hidden>
+      <h1>ADDED!</h1>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
