--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="navigation-container">
         <span class="background"></span>
           <!-- Results Nav -->
-          <span class="nagivation-items" id="resultsNav">
+          <span class="navigation-items" id="resultsNav">
             <h3 class="clickable">Favorites</h3>
             <h3>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;&nbsp;</h3>
             <h3 class="clickable">Load More</h3>
